# 8051Sim

./: pyproject.toml  setup.cfg  tox.ini  vercel.json
.github/workflows/: build.yml
api/: __init__.py  index.py
core/: flags.py  instruction_set.py  memory.py  opcodes.py  util.py
